@@ -37,9 +37,10 @@ console.keys                          = Key aliases in the keystore:
 console.keystores                     = Available key store types:
 console.loadKeystore                  = Loading keystore: {0}
 console.memoryError                   = \r\nJava is out of memory. Try to allow more memory to your JVM.\r\nAdd parameter -Xmx<size> to your java call.\r\ne.g. $java -Xmx512m  ... sets maximum Java heap size to 512MB.\r\n
+console.noOCSPURL                     = OCSP server URL not found in Certificate. The value entered in application settings will be used.
 console.processing                    = Processing (it may take a while) ...
 console.readingCRLs                   = Reading CRLs
-console.readingOCSP                   = Getting OCSP data.
+console.readingOCSP                   = Getting OCSP data from URL: {0}
 console.setAcro6Layers                = Setting Acro6 layers
 console.setCertificationLevel         = Setting certification level
 console.setContact                    = Setting contact: {0}
@@ -120,6 +121,7 @@ gui.title                             = JSignPdf (version {0})
 gui.tsa.crlEnabled.checkbox           = Enable CRL
 gui.tsa.enabled.checkbox              = Use timestamp server
 gui.tsa.ocspEnabled.checkbox          = Enable OCSP
+gui.tsa.ocspServerUrl.label           = default OCSP server URL
 gui.tsa.policy.label                  = TSA Policy (OID)
 gui.tsa.proxy.panel                   = Proxy settings
 gui.tsa.proxyHost.label               = Proxy host/port
@@ -190,6 +192,7 @@ hlp.loadProperties     = Loads properties from a default file (created by GUI ap
 hlp.loadPropertiesFile = Loads properties from the given file. The file can be create by copying the default property file .JSignPdf created by the GUI in the user home directory.
 hlp.location           = location of a signatue (e.g. Washington DC). Empty by default.
 hlp.ocsp               = enable OCSP certificate validation
+hlp.ocspServerUrl      = default OCSP server URL, which will be used in case the signing certificate doesn't contain this information
 hlp.outPath            = folder in which the signed documents will be stored. Default value is current folder.
 hlp.outPrefix          = prefix for signed file. Default value is empty prefix.
 hlp.outSuffix          = suffix for signed filename. Default value is "_signed". (e.g. sign process on file mydocument.pdf will create new file mydocument_signed.pdf)
