@@ -38,9 +38,10 @@ console.keys                          = Aliasy kl\u00ED\u010D\u016F ve vybran\u0
 console.keystores                     = Zn\u00E1m\u00E9 typy \u00FAlo\u017Ei\u0161\u0165 kl\u00ED\u010D\u016F:
 console.loadKeystore                  = Na\u010D\u00EDt\u00E1m \u00FAlo\u017Ei\u0161t\u011B kl\u00ED\u010D\u016F ze souboru: {0}
 console.memoryError                   = \r\nProgram m\u00E1 nedostatek pam\u011Bti. Povolte p\u0159i spou\u0161t\u011Bn\u00ED v\u00EDce pam\u011Bti pro Javu (JVM).\r\nM\u016F\u017Eete p\u0159idat parametr -Xmx<velikost> jako argument p\u0159i vol\u00E1n\u00ED javy.\r\nnap\u0159. $java -Xmx512m  ... nastav\u00ED maximum pam\u011Bti (heap) v Jav\u011B na 512MB.\r\n
+console.noOCSPURL                     = Adresa OCSP serveru v certifik\u00E1tu nenalezena. Pou\u017Eije se hodnota zadan\u00E1 v programu.
 console.processing                    = Zpracov\u00E1v\u00E1m (m\u016F\u017Ee to chv\u00EDli zabrat) ...
 console.readingCRLs                   = Na\u010D\u00EDt\u00E1n\u00ED seznamu CRL
-console.readingOCSP                   = Z\u00EDsk\u00E1v\u00E1n\u00ED OCSP dat.
+console.readingOCSP                   = Z\u00EDsk\u00E1v\u00E1n\u00ED OCSP dat z URL: {0}
 console.setAcro6Layers                = Nastavuji vrstvy Acro6
 console.setCertificationLevel         = Nastavuji \u00FArove\u0148 certifikace
 console.setContact                    = Natavuji kontakt: {0}
@@ -119,6 +120,7 @@ gui.title                             = JSignPdf (verze {0})
 gui.tsa.crlEnabled.checkbox           = Pou\u017E\u00EDt CRL
 gui.tsa.enabled.checkbox              = Pou\u017E\u00EDt server pro \u010Dasov\u00E1 raz\u00EDtka
 gui.tsa.ocspEnabled.checkbox          = Pou\u017E\u00EDt OCSP
+gui.tsa.ocspServerUrl.label           = v\u00FDchoz\u00ED URL OCSP serveru
 gui.tsa.policy.label                  = TSA politika (OID)
 gui.tsa.proxy.panel                   = Nastaven\u00ED proxy serveru
 gui.tsa.proxyHost.label               = Adresa serveru a port
@@ -186,6 +188,7 @@ hlp.loadProperties     = Na\u010D\u00EDt\u00E1 nastaven\u00ED ze standartn\u00ED
 hlp.loadPropertiesFile = Na\u010D\u00EDt\u00E1 nastaven\u00ED programu ze zadan\u00E9ho souboru. Pou\u017Eit\u00FD soubor m\u016F\u017Ee b\u00FDt vytvo\u0159en\u00FD zkop\u00EDrov\u00E1n\u00EDm v\u00FDchoz\u00EDho souboru .JSignPdf vytvo\u0159en\u00E9ho p\u0159i spu\u0161t\u011Bn\u00ED GUI v u\u017Eivatelsk\u00E9m domovsk\u00E9m adres\u00E1\u0159i.
 hlp.location           = nastaven\u00ED m\u00EDsta (location) podpisu (nap\u0159. Brno). V\u00FDchoz\u00ED hodnota je pr\u00E1zdn\u00E1.
 hlp.ocsp               = povoluje OCSP validaci certifik\u00E1tu
+hlp.ocspServerUrl      = adresa OCSP serveru, kter\u00E1 bude pou\u017Eita v p\u0159\u00EDpad\u011B, \u017Ee certifik\u00E1t tuto informaci neobsahuje
 hlp.outPath            = adres\u00E1\u0159 do kter\u00E9ho budou um\u00EDst\u011Bny podepsan\u00E1 PDF. V\u00FDchoz\u00EDm nastaven\u00EDm je sou\u010Dasn\u00FD adres\u00E1\u0159.
 hlp.outPrefix          = prefix podepsan\u00E9ho souboru. V\u00FDchoz\u00ED hodnota je pr\u00E1zdn\u00FD prefix.
 hlp.outSuffix          = suffix (p\u0159\u00EDpona) podepsan\u00E9ho souboru. V\u00FDchoz\u00ED hodnota je "_signed". Nap\u0159. p\u0159i podeps\u00E1n\u00ED souboru dokument.pdf bude vytvo\u0159en soubor dokument_signed.pdf
