@@ -27,7 +27,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		getRootPane().setDefaultButton(btnTsaOK);
 		cbProxyType.setModel(new DefaultComboBoxModel(Proxy.Type.values()));
 		translateLabels();
-		switchTsaEnabled();
+		updateEnabledStatus();
 	}
 
 	/**
@@ -44,6 +44,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		setLabelAndMnemonic(lblTsaPolicy, "gui.tsa.policy.label");
 
 		setLabelAndMnemonic(chkbOcspEnabled, "gui.tsa.ocspEnabled.checkbox");
+		setLabelAndMnemonic(lblOcspUrl, "gui.tsa.ocspServerUrl.label");
 		setLabelAndMnemonic(chkbCrlEnabled, "gui.tsa.crlEnabled.checkbox");
 
 		setLabelAndMnemonic(pnlProxy, "gui.tsa.proxy.panel");
@@ -61,6 +62,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		pfTsaPwd.setText(options.getTsaPasswd());
 		tfTsaPolicy.setText(options.getTsaPolicy());
 		chkbOcspEnabled.setSelected(options.isOcspEnabled());
+		tfOcspUrl.setText(options.getOcspServerUrl());
 		chkbCrlEnabled.setSelected(options.isCrlEnabled());
 		cbProxyType.setSelectedItem(options.getProxyType());
 		tfProxyHost.setText(options.getProxyHost());
@@ -70,12 +72,14 @@ public class TsaDialog extends javax.swing.JDialog {
 	/**
 	 * Enabling text field
 	 */
-	private void switchTsaEnabled() {
-		boolean tmpEnabled = chkbTsaEnabled.isSelected();
-		tfTsaUrl.setEnabled(tmpEnabled);
-		tfTsaUser.setEnabled(tmpEnabled);
-		pfTsaPwd.setEnabled(tmpEnabled);
-		tfTsaPolicy.setEnabled(tmpEnabled);
+	private void updateEnabledStatus() {
+		final boolean tmpTsaEnabled = chkbTsaEnabled.isSelected();
+		tfTsaUrl.setEnabled(tmpTsaEnabled);
+		tfTsaUser.setEnabled(tmpTsaEnabled);
+		pfTsaPwd.setEnabled(tmpTsaEnabled);
+		tfTsaPolicy.setEnabled(tmpTsaEnabled);
+
+		tfOcspUrl.setEnabled(chkbOcspEnabled.isSelected());
 	}
 
 	/**
@@ -88,6 +92,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		options.setTsaPasswd(new String(pfTsaPwd.getPassword()));
 		options.setTsaPolicy(tfTsaPolicy.getText());
 		options.setOcspEnabled(chkbOcspEnabled.isSelected());
+		options.setOcspServerUrl(tfOcspUrl.getText());
 		options.setCrlEnabled(chkbCrlEnabled.isSelected());
 
 		options.setProxyType((Proxy.Type) cbProxyType.getSelectedItem());
@@ -113,10 +118,7 @@ public class TsaDialog extends javax.swing.JDialog {
 	 * WARNING: Do NOT modify this code. The content of this method is always
 	 * regenerated by the Form Editor.
 	 */
-	// <editor-fold defaultstate="collapsed"
-	// <editor-fold defaultstate="collapsed"
-	// <editor-fold defaultstate="collapsed"
-	// desc="Generated Code">//GEN-BEGIN:initComponents
+	// <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
 	private void initComponents() {
 		java.awt.GridBagConstraints gridBagConstraints;
 
@@ -138,6 +140,8 @@ public class TsaDialog extends javax.swing.JDialog {
 		spProxyPort = new javax.swing.JSpinner();
 		lblTsaPolicy = new javax.swing.JLabel();
 		tfTsaPolicy = new javax.swing.JTextField();
+		lblOcspUrl = new javax.swing.JLabel();
+		tfOcspUrl = new javax.swing.JTextField();
 
 		addComponentListener(new java.awt.event.ComponentAdapter() {
 			public void componentHidden(java.awt.event.ComponentEvent evt) {
@@ -226,6 +230,11 @@ public class TsaDialog extends javax.swing.JDialog {
 
 		chkbOcspEnabled.setText("Use OCSP");
 		chkbOcspEnabled.setMaximumSize(new java.awt.Dimension(2147483647, 2147483647));
+		chkbOcspEnabled.addActionListener(new java.awt.event.ActionListener() {
+			public void actionPerformed(java.awt.event.ActionEvent evt) {
+				chkbTsaEnabledActionPerformed(evt);
+			}
+		});
 		gridBagConstraints = new java.awt.GridBagConstraints();
 		gridBagConstraints.gridx = 0;
 		gridBagConstraints.gridy = 5;
@@ -243,7 +252,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		});
 		gridBagConstraints = new java.awt.GridBagConstraints();
 		gridBagConstraints.gridx = 1;
-		gridBagConstraints.gridy = 8;
+		gridBagConstraints.gridy = 9;
 		gridBagConstraints.anchor = java.awt.GridBagConstraints.EAST;
 		gridBagConstraints.insets = new java.awt.Insets(7, 2, 2, 5);
 		getContentPane().add(btnTsaOK, gridBagConstraints);
@@ -252,7 +261,7 @@ public class TsaDialog extends javax.swing.JDialog {
 		chkbCrlEnabled.setMaximumSize(new java.awt.Dimension(2147483647, 2147483647));
 		gridBagConstraints = new java.awt.GridBagConstraints();
 		gridBagConstraints.gridx = 0;
-		gridBagConstraints.gridy = 6;
+		gridBagConstraints.gridy = 7;
 		gridBagConstraints.gridwidth = 2;
 		gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
 		gridBagConstraints.insets = new java.awt.Insets(2, 5, 2, 5);
@@ -319,7 +328,7 @@ public class TsaDialog extends javax.swing.JDialog {
 
 		gridBagConstraints = new java.awt.GridBagConstraints();
 		gridBagConstraints.gridx = 0;
-		gridBagConstraints.gridy = 7;
+		gridBagConstraints.gridy = 8;
 		gridBagConstraints.gridwidth = 2;
 		gridBagConstraints.fill = java.awt.GridBagConstraints.BOTH;
 		getContentPane().add(pnlProxy, gridBagConstraints);
@@ -343,6 +352,29 @@ public class TsaDialog extends javax.swing.JDialog {
 		gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
 		gridBagConstraints.insets = new java.awt.Insets(2, 5, 2, 5);
 		getContentPane().add(tfTsaPolicy, gridBagConstraints);
+
+		lblOcspUrl.setHorizontalAlignment(javax.swing.SwingConstants.LEFT);
+		lblOcspUrl.setLabelFor(tfOcspUrl);
+		lblOcspUrl.setText("External OCSP URL");
+		gridBagConstraints = new java.awt.GridBagConstraints();
+		gridBagConstraints.gridx = 0;
+		gridBagConstraints.gridy = 6;
+		gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
+		gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+		gridBagConstraints.weightx = 1.0;
+		gridBagConstraints.insets = new java.awt.Insets(2, 5, 2, 5);
+		getContentPane().add(lblOcspUrl, gridBagConstraints);
+
+		tfOcspUrl.setMinimumSize(new java.awt.Dimension(200, 20));
+		tfOcspUrl.setPreferredSize(new java.awt.Dimension(200, 20));
+		gridBagConstraints = new java.awt.GridBagConstraints();
+		gridBagConstraints.gridx = 1;
+		gridBagConstraints.gridy = 6;
+		gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
+		gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+		gridBagConstraints.weightx = 4.0;
+		gridBagConstraints.insets = new java.awt.Insets(2, 5, 2, 5);
+		getContentPane().add(tfOcspUrl, gridBagConstraints);
 	}// </editor-fold>//GEN-END:initComponents
 
 	private void btnTsaOKActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_btnTsaOKActionPerformed
@@ -350,12 +382,12 @@ public class TsaDialog extends javax.swing.JDialog {
 	}// GEN-LAST:event_btnTsaOKActionPerformed
 
 	private void chkbTsaEnabledActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_chkbTsaEnabledActionPerformed
-		switchTsaEnabled();
+		updateEnabledStatus();
 	}// GEN-LAST:event_chkbTsaEnabledActionPerformed
 
 	private void formComponentShown(java.awt.event.ComponentEvent evt) {// GEN-FIRST:event_formComponentShown
 		updateFromOptions();
-		switchTsaEnabled();
+		updateEnabledStatus();
 	}// GEN-LAST:event_formComponentShown
 
 	private void formComponentHidden(java.awt.event.ComponentEvent evt) {// GEN-FIRST:event_formComponentHidden
@@ -368,6 +400,7 @@ public class TsaDialog extends javax.swing.JDialog {
 	private javax.swing.JCheckBox chkbCrlEnabled;
 	private javax.swing.JCheckBox chkbOcspEnabled;
 	private javax.swing.JCheckBox chkbTsaEnabled;
+	private javax.swing.JLabel lblOcspUrl;
 	private javax.swing.JLabel lblProxyHost;
 	private javax.swing.JLabel lblProxyType;
 	private javax.swing.JLabel lblTsaPolicy;
@@ -377,6 +410,7 @@ public class TsaDialog extends javax.swing.JDialog {
 	private javax.swing.JPasswordField pfTsaPwd;
 	private javax.swing.JPanel pnlProxy;
 	private javax.swing.JSpinner spProxyPort;
+	private javax.swing.JTextField tfOcspUrl;
 	private javax.swing.JTextField tfProxyHost;
 	private javax.swing.JTextField tfTsaPolicy;
 	private javax.swing.JTextField tfTsaUrl;
